# InkBack

./: .gitignore  Cargo.toml  README.md
examples/equities/: equities_example.rs
examples/footprint/: footprint_example.rs
examples/futures/: futures_example.rs
examples/options/: options_example.rs
examples/walkforward/: walkforward_futures_example.rs
kalshi_docs/: authentication.md  get_markets.md  market_data_feed.md
src/: backtester.rs  event.rs  main.rs  plot.rs  schema_handler.rs  slippage_models.rs  strategy.rs  walkforward.rs
src/data/: placeholder.txt
src/utils/: fetch.rs  mod.rs
