[package]
name = "InkBack"
version = "0.1.0"
edition = "2021"

[dependencies]
databento = "0.37.0"
time = "0.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dotenvy = "0.15"
csv = "1.3"
rayon = "1.8"
serde = "1.0.219"
iced = { version = "0.12", features = ["canvas", "tokio"] }
serde_json = "1.0"
futures = "0.3"
